--- a/src/PaymentsTypeModule/ChargeClients/View/GridQueryOffices.xaml
+++ b/src/PaymentsTypeModule/ChargeClients/View/GridQueryOffices.xaml
@@ -21,12 +21,13 @@
             <RowDefinition Height="80*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0"  VerticalAlignment="Top" HorizontalAlignment="Left" Content="{Binding QueryType}" Background="LightSkyBlue" FontWeight="Bold" FontSize="16"/>
+        <Label Grid.Row="0"  VerticalAlignment="Top" HorizontalAlignment="Left" Content="{Binding Title}" Background="LightSkyBlue" FontWeight="Bold" FontSize="16"/>
 
 
         <extendedGridControl:ExtendedDataGrid  Grid.Row="1"  
                                                x:Name="QueryType" 
                                                ItemsSource="{Binding QueryTable}" 
+                                               SelectedIndex="{Binding SelectedIndex}"
                                                RowHeaderWidth="17" 
                                                IsReadOnly="True"
                                                AutoGenerateColumns="False" 
@@ -38,6 +39,11 @@
                                                IsSynchronizedWithCurrentItem="True"  
                                                SelectionMode="Extended" 
                                                SelectionUnit="FullRow" >
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction Command="{Binding DataGridChangedSelection}" CommandParameter="{Binding ElementName=QueryType, Path=SelectedValue}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
 
             <DataGrid.Columns>
                 <extendedColumn:ExtendedDataGridTextColumn  Header="Codigo" AllowAutoFilter="True" Width="30*" Binding="{Binding Codigo}"
