--- a/src/View/GrupoVehiculoDataGridUserControl.xaml
+++ b/src/View/GrupoVehiculoDataGridUserControl.xaml
@@ -6,10 +6,9 @@
              xmlns:ExtendedGridControl="clr-namespace:ExtendedGrid.ExtendedGridControl;assembly=ExtendedGrid"
              xmlns:local="clr-namespace:KarveCar.View"
              xmlns:extendedColumn="clr-namespace:ExtendedGrid.ExtendedColumn;assembly=ExtendedGrid"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d">
     <Grid>
-        <ScrollViewer HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Auto">
+        <!--<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" CanContentScroll="True">-->
             <DataGrid x:Name="dtgrGruposVehiculos" 
                       DataContext="{StaticResource grupoVehiculoViewModel}"
                       ItemsSource="{Binding GrupoVehiculoDataTable}" 
@@ -21,13 +20,12 @@
                     <DataGridTextColumn Header="Descripción" Binding="{Binding Definicion}"         /><!--AllowAutoFilter="False" CanUserSort="True"  />-->
                     <DataGridTextColumn Header="Acriss"      Binding="{Binding Acriss}"             /><!--AllowAutoFilter="False" CanUserSort="True"  />-->
                     <DataGridTextColumn Header="Modelo"      Binding="{Binding Modelo}"             /><!--AllowAutoFilter="False" CanUserSort="True"  />-->
-                    <DataGridTextColumn Header="Tipo"        Binding="{Binding TipoVehiculoCodigo}" /><!--AllowAutoFilter="False" CanUserSort="True"  />-->
+                    <DataGridTextColumn Header="Tipo"        Binding="{Binding TipoVehiculoCodigo}" /><!--AllowAutoFilter="False" CanUserSort="True"  />-->            
                 </DataGrid.Columns>
             </DataGrid>
             <!--<ExtendedGridControl:ExtendedDataGrid x:Name="dtgrGruposVehiculos" 
                                                   DataContext="{StaticResource grupoVehiculoViewModel}"
                                                   ItemsSource="{Binding GrupoVehiculoDataTable}" 
-                                                  SelectedItem="{Binding GrupoVehiculoSelectedItem}"
                                                   RowHeaderWidth="12"  
                                                   SearchAutoFilterVisibility="Visible"
                                                   AutoFilterFontSize="12"
@@ -39,6 +37,7 @@
                                                   SelectionUnit="CellOrRowHeader" 
                                                   IsReadOnly="True"
                                                   Theme="Office2007Silver">
+                --><!--SelectedItem="{Binding GrupoVehiculoSelectedItem}"--><!--
                 <DataGrid.Columns>
                     <extendedColumn:ExtendedDataGridTextColumn Header="Código"      Binding="{Binding Codigo}"             AllowAutoFilter="False" CanUserSort="True"  />
                     <extendedColumn:ExtendedDataGridTextColumn Header="Descripción" Binding="{Binding Definicion}"         AllowAutoFilter="False" CanUserSort="True"  />
@@ -55,6 +54,7 @@
                     </DataTemplate>
                 </ExtendedGridControl:ExtendedDataGrid.FooterDataTemplate>
             </ExtendedGridControl:ExtendedDataGrid>-->
-        </ScrollViewer>
+        <!--</ScrollViewer>-->
     </Grid>
 </UserControl>
+
