--- a/lib/ExtendedDataGrid/ExtendedGrid/UserControls/ColumnChooserControl.xaml
+++ b/lib/ExtendedDataGrid/ExtendedGrid/UserControls/ColumnChooserControl.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl x:Class="ExtendedGrid.UserControls.ColumnChooserControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             VerticalAlignment="Stretch" VerticalContentAlignment="Stretch" 
-             SizeChanged="UserControlSizeChanged" FontFamily="Arial" FontSize="9">
+              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             VerticalAlignment="Stretch" VerticalContentAlignment="Stretch" SizeChanged="UserControlSizeChanged" FontFamily="Arial" FontSize="9"
+   >
     <UserControl.Resources>
         <Style x:Key="CheckBoxStyle" TargetType="{x:Type CheckBox}">
             <Setter Property="SnapsToDevicePixels" Value="true"/>
@@ -14,15 +14,13 @@
                     <ControlTemplate TargetType="{x:Type CheckBox}">
                         <Border>
                             <Grid>
-                                <ContentPresenter Content="{TemplateBinding Content}" 
-                                                  ContentTemplate="{TemplateBinding ContentTemplate}" 
-                                                  Margin="{TemplateBinding Padding}"  />
+                                <ContentPresenter Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" Margin="{TemplateBinding Padding}"  />
                                 <Border>
                                     <Border.Background>
                                         <VisualBrush Opacity="1.0" Stretch="None">
                                             <VisualBrush.Visual>
                                                 <Path Name="path" Opacity="0.1" Data="M 0 5 L 3 10 10 0" Stroke="#FF3838BA" StrokeThickness="1.5" 
-                                                      StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeLineJoin="Round" />
+			StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeLineJoin="Round" />
                                             </VisualBrush.Visual>
                                         </VisualBrush>
                                     </Border.Background>
@@ -39,6 +37,7 @@
                                 <Setter Property="Foreground" Value="Gray" />
                             </Trigger>
                         </ControlTemplate.Triggers>
+
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -70,11 +69,12 @@
         </Popup>
         <!-- Drag and Drop Popup -->
         <DataGrid x:Name="grid" AutoGenerateColumns="False" IsReadOnly="False" 
-                  ItemsSource="{Binding ColumnChooserDataTable}" HeadersVisibility="None"
-                  CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False"
-                  CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False"
-                  Style="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" GridLinesVisibility="None" 
-                  Loaded="DataGridLoaded" SizeChanged="GridSizeChanged" MouseMove="GridMouseMove" PreviewMouseLeftButtonUp="GridPreviewMouseLeftButtonUp">
+                           ItemsSource="{Binding ColumnChooserDataTable}" HeadersVisibility="None"
+                           CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False"
+                           CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False"
+                           Style="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" GridLinesVisibility="None" 
+                           Loaded="DataGridLoaded" SizeChanged="GridSizeChanged" MouseMove="GridMouseMove" PreviewMouseLeftButtonUp="GridPreviewMouseLeftButtonUp"
+                           >
             <DataGrid.Resources>
                 <Style TargetType="{x:Type DataGridCell}">
                     <EventSetter Event="PreviewMouseLeftButtonDown" Handler="PreviewDataCellMouseLeftButtonDown"/>
@@ -83,24 +83,37 @@
                 </Style>
             </DataGrid.Resources>
             <DataGrid.Columns>
-                <DataGridCheckBoxColumn  Width="SizeToCells" MinWidth="25" Binding="{Binding chkBox}" IsReadOnly="False" ElementStyle="{StaticResource CheckBoxStyle}" />
-                
-                <DataGridTemplateColumn>
+                <DataGridCheckBoxColumn  Width="SizeToCells" MinWidth="25" 
+                                           Binding="{Binding chkBox}"
+                                           IsReadOnly="False" ElementStyle="{StaticResource CheckBoxStyle}" >
+
+                </DataGridCheckBoxColumn>
+                <DataGridTemplateColumn 
+                                   >
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <DataGridCell Content="{Binding columnHeader}" Foreground="Black" VerticalAlignment="Center"/>
+                            <DataGridCell Content="{Binding columnHeader}" 
+                                       Foreground="Black" 
+                  VerticalAlignment="Center"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
+
                 </DataGridTemplateColumn>
 
-                <DataGridTemplateColumn CellEditingTemplate="{StaticResource editingTextBoxTemplate}" Visibility="Collapsed"  >
+                <DataGridTemplateColumn CellEditingTemplate="{StaticResource editingTextBoxTemplate}"
+                                                 Visibility="Collapsed"  >
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <DataGridCell Content="{Binding columnField}" Foreground="Black" VerticalAlignment="Center"/>
+                            <DataGridCell Content="{Binding columnField}" 
+                                       Foreground="Black" 
+                  VerticalAlignment="Center"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
+
+
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
+
         </DataGrid>
     </DockPanel>
 </UserControl>
